{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 248,
  "lineage": "e785dd7a-9853-acb4-40ec-306e241bbe70",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792128288407:security-group/sg-65f10774",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-65f10774",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-d1a5dfac"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792128288407:vpc/vpc-d1a5dfac",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-3ec99e51",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-270dea5a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-d1a5dfac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-847bbaf5",
            "owner_id": "792128288407",
            "state": "available",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e011417bd70948da",
            "arn": "arn:aws:ec2:us-east-1:792128288407:instance/i-03c74298ac9f768fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c74298ac9f768fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "iac-demo-privatekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc9a61d8e7f7680c",
            "private_dns": "ip-172-31-94-87.ec2.internal",
            "private_ip": "172.31.94.87",
            "public_dns": "ec2-100-27-29-137.compute-1.amazonaws.com",
            "public_ip": "100.27.29.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06acac14d3006f4d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b70b3f96",
            "tags": {
              "Name": "AppServerInstance1"
            },
            "tags_all": {
              "Name": "AppServerInstance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-086b272b0e83b854e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e011417bd70948da",
            "arn": "arn:aws:ec2:us-east-1:792128288407:instance/i-01207a751fad3d061",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01207a751fad3d061",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "iac-demo-privatekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03fa0480e9bdcb309",
            "private_dns": "ip-172-31-83-151.ec2.internal",
            "private_ip": "172.31.83.151",
            "public_dns": "ec2-3-86-38-62.compute-1.amazonaws.com",
            "public_ip": "3.86.38.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b175ecf4b55b3e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b70b3f96",
            "tags": {
              "Name": "AppServerInstance2"
            },
            "tags_all": {
              "Name": "AppServerInstance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-086b272b0e83b854e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792128288407:security-group/sg-086b272b0e83b854e",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086b272b0e83b854e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "792128288407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1a5dfac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}